--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <style>h2{color:blue}</style> (css언어로 표현한 색깔)
   </head>
   <body>
-    <h1 style="color:red">Hello World</h1> (html언어의 속성으로 표현한 색깔)
+    <h1 style="color:red">Hello Worldggg</h1> (html언어의 속성으로 표현한 색깔)
     <h2>Hello world</h2>
   </body>
 </html>
